; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_ctors.c_raise_memory_error.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_ctors.c_raise_memory_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@raise_memory_error.exc_type = internal global i32* null, align 8
@.str = private unnamed_addr constant [23 x i8] c"numpy.core._exceptions\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"_ArrayMemoryError\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32*, i32*)* @raise_memory_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @raise_memory_error(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = call i32 @npy_cache_import(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32** @raise_memory_error.exc_type)
  %11 = load i32*, i32** @raise_memory_error.exc_type, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  br label %36

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = call i32* @PyArray_IntTupleFromIntp(i32 %15, i32* %16)
  store i32* %17, i32** %8, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  br label %36

21:                                               ; preds = %14
  %22 = load i32*, i32** %8, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = call i32* @PyTuple_Pack(i32 2, i32* %22, i32* %23)
  store i32* %24, i32** %9, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @Py_DECREF(i32* %25)
  %27 = load i32*, i32** %9, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %21
  br label %36

30:                                               ; preds = %21
  %31 = load i32*, i32** @raise_memory_error.exc_type, align 8
  %32 = load i32*, i32** %9, align 8
  %33 = call i32 @PyErr_SetObject(i32* %31, i32* %32)
  %34 = load i32*, i32** %9, align 8
  %35 = call i32 @Py_DECREF(i32* %34)
  store i32* null, i32** %4, align 8
  br label %39

36:                                               ; preds = %29, %20, %13
  %37 = call i32 @PyErr_WriteUnraisable(i32* null)
  %38 = call i32* (...) @PyErr_NoMemory()
  store i32* %38, i32** %4, align 8
  br label %39

39:                                               ; preds = %36, %30
  %40 = load i32*, i32** %4, align 8
  ret i32* %40
}

declare dso_local i32 @npy_cache_import(i8*, i8*, i32**) #1

declare dso_local i32* @PyArray_IntTupleFromIntp(i32, i32*) #1

declare dso_local i32* @PyTuple_Pack(i32, i32*, i32*) #1

declare dso_local i32 @Py_DECREF(i32*) #1

declare dso_local i32 @PyErr_SetObject(i32*, i32*) #1

declare dso_local i32 @PyErr_WriteUnraisable(i32*) #1

declare dso_local i32* @PyErr_NoMemory(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
